some changes, dashboard data and others, polishing..

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,13 +3,15 @@
     .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
 <main class="d-flex flex-nowrap justify-content-center align-items-center" style=" height: 100vh">
-    <div class="d-flex flex-column justify-center align-items-center container py-5 px-5 gap-2" style="width: auto">
-        <div>
-            <img src="/img/bfar-logo.png" alt="" style="width: 150px">
-            <img src="/img/niftc.png" alt="" style="width: 150px">
+    <div class="d-flex align-items-center justify-content-center vh-100">
+        <div class="text-center">
+            <h1 class="display-1 fw-bold">404</h1>
+            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+            <p class="lead">
+                The page you’re looking for doesn’t exist.
+              </p>
+            <a href="/admin/" class="btn btn-primary">Go Home</a>
         </div>
-        <h1 style="font-size: 3rem">404 Page Not Found :)</h1>
-        <a class="btn btn-primary" href="http://localhost:3000/"> GO HOME</a>
     </div>
     
 </main>
