--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -25,7 +25,7 @@
                         <img src="/img/niftc.png"
                             style="width: 185px;" alt="logo">
                     </div>
-                    <h4 class="mt-4 mb-5 pb-1">BFAR-MS PORTAL</h4>
+                    <h4 class="mt-4 mb-5 pb-1">[ADMIN] BFAR-MS PORTAL</h4>
                   </div>
   
                   <form>
