--- a/views/attendanceDTR.ejs
+++ b/views/attendanceDTR.ejs
@@ -101,11 +101,11 @@
         },
         printDTR:{
           url: '/admin/attendance/history/print',
-          name: 'Print DTR'
+          name: 'Generate/Print DTR'
         },
         printDTRPerEmployee:{
           url: '/admin/attendance/history/print/per-employee',
-          name: 'Print DTR Per Employee'
+          name: 'Generate/Print DTR Per Employee'
           },
         },
     })%>
