--- a/views/partials/Header.ejs
+++ b/views/partials/Header.ejs
@@ -16,4 +16,10 @@
     <title>EMS</title>
 </head>  
 <body>
+    <!-- <div class="preloader">
+        <div class="preloader-inner">
+          <img src="/img/bfar-logo.png" class="img-fluid mx-auto" alt="...">
+        </div>
+      </div> -->
+    
     
