--- a/views/payrollHistory.ejs
+++ b/views/payrollHistory.ejs
@@ -11,7 +11,7 @@
       },
       payrollPeriods:{
           url: '/admin/payroll/history/all',
-          name: 'Payroll Periods'
+          name: 'Payroll History'
       },
       payrollGroups:{
         url: '/admin/payroll/groups',
@@ -129,11 +129,11 @@
     <%-include('partials/navBar.ejs', {data:{
         payroll: {
             url: '/admin/payroll/history/all',
-            name: 'All Payroll History'
+            name: 'Generate/Print Payroll'
         },
         payslips:{
           url: '/admin/payroll/history/payslips',
-          name: 'Payslips'
+          name: 'Generate/Print Payslip'
         }
       },
     })%>
