--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -290,3 +290,21 @@ input[type='radio']:checked{
     }
 }
 
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #fff;
+  }
+  
+  .preloader-inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
