--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -100,4 +100,4 @@
 <%-include('partials/Footer')%>
 <script type="text/javascript" src="/script/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-<script type="text/javascript" src="/scripts/dateFilter.js"></script> 
+<script type="text/javascript" src="/script/dateFilter.js"></script> 
