--- a/views/employeeAttendanceDtr.ejs
+++ b/views/employeeAttendanceDtr.ejs
@@ -2,33 +2,46 @@
 <link rel="stylesheet" href="/styles/dataTable.css">
 <main class="d-flex flex-nowrap" style="align-self: center;">
 
-    <%-include('partials/Aside')%> 
+    <%-include('partials/employeeAside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
 
-    <%-include('partials/navBar.ejs', {data:{
-        attendance: {
-            parentUrl:'/admin/attendance',
-            url: '/admin/attendance/all',
-            name: 'Attendance'
-        },
-        attendancePeriod:{
-            url: '/admin/attendance/history/print/per-employee',
-            name: 'DTR History'
-            },
-        },
-    })%>
+  <%-include('partials/navBar.ejs', {data:{
+    attendance: {
+        url: `/employee/attendance/${(data.detailedSummaryData) ? data.detailedSummaryData[0].emp_code : 0}/dtr`,
+        name: 'Attendance'
+    },
+},
+})%>
 
     <div>
       <section id="minimal-statistics">
           <div class="row">
             <div class="col-12">
-              <h4 class="text-uppercase">Manage Attendance</h4>
-              <p>Attendance Summary, Tools, and Redirects</p>
+              <h4 class="text-uppercase">Monitor Attendance</h4>
+              <p>Attendance Summary, Monitoring, and Redirects</p>
             </div>
           </div>
           <div class="d-flex flex-column">
             <div class="row card-con">
-              <div class="col-xl-12" style="gap: 1.5em;">
+              <div class="col-xl-6" style="gap: 1.5em;">
+                <div class="card card-stats mb-xl-0">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Your ID</h5>
+                        <span class="h2 font-weight-bold mb-0"><%=(data.result) ? data.result[0]._id : '0'%></span>
+                      </div>
+                      <div class="col-auto">
+
+                      </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                      <a href="/admin/attendance/history/print/per-employee"><span class="text-nowrap">View Details</span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-6" style="gap: 1.5em;">
                 <div class="card card-stats mb-xl-0">
                   <div class="card-body">
                     <div class="row">
@@ -71,20 +84,20 @@
         </form>
     </div>
     <%-include('partials/navBar.ejs', {data:{
-        dailyTimeRecord: {
-            url: '/admin/attendance/history/all',
-            name: 'Daily Time Records'
-        },
-        printDTR:{
-          url: '/admin/attendance/history/print',
-          name: 'Generate/Print DTR'
-        },
-        attendancePeriod:{
-            url: '/admin/attendance/history/print/per-employee',
-            name: 'Generate/Print DTR Per Employee'
-            },
-        },
-    })%>
+      attendance: {
+          url: `/employee/attendance/${(data.detailedSummaryData) ? data.detailedSummaryData[0].emp_code : 0}`,
+          name: 'All Attendance'
+      },
+      attendanceSummary:{
+          url: `/employee/attendance/${(data.detailedSummaryData) ? data.detailedSummaryData[0].emp_code : 0}/summary`,
+          name: 'Attendance Summary'
+      },
+      attendanceDtr:{
+          url: `/employee/attendance/${(data.detailedSummaryData) ? data.detailedSummaryData[0].emp_code : 0}/dtr`,
+          name: 'Print DTR'
+      }
+  },
+})%>
     <div>
       <div class="d-flex table-container table-responsive"> 
           
