--- a/views/employeeLogin.ejs
+++ b/views/employeeLogin.ejs
@@ -7,45 +7,64 @@
     .btn{ padding: 15px 0px 15px 0px;  border-color: #67668A; height: 50px;}
     .btn-primary:hover{ background: #424158;}
     .btn-primary:active{ background: #424158;}
+    .container{background-color: #FFFEFE !important; border: 0;}
 </style>
 <div class="d-flex p-2 justify-content-center align-items-center" style="height: 100vh;">
-    
-    <div class="container-sm shadow rounded-1" style="max-width: 500px; background: #F5F5F5; border: solid #efeff3 1px;padding: 60px 0px 60px 0px;">
-
-        <form class="d-flex justify-content-center flex-column "> 
-
-            <img src="/img/bfar-logo.png" class="img-fluid mx-auto" alt="..." style="max-width: 40%;">
-            <h1 class="text-center" style="margin-bottom: 2em;">BFAR Management System Portal Login</h1>
-
-            <div class="mb-0 mb-3">
-                <input type="text" class="form-control" name='email' id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Username">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-xl-10">
+          <div class="card rounded-3 text-black">
+            <div class="row g-0">
+              <div class="col-lg-6">
+                <div class="card-body p-md-5 mx-md-4">
+  
+                  <div class="text-center">
+                    <div class="logo">
+                        <img src="/img/bfar-logo.png"
+                          style="width: 185px;" alt="logo">
+                        <img src="/img/niftc.png"
+                            style="width: 185px;" alt="logo">
+                    </div>
+                    <h4 class="mt-4 mb-5 pb-1">[EMPLOYEE] BFAR-MS PORTAL</h4>
+                  </div>
+  
+                  <form>
+                    <p>Please login to your account</p>
+  
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" name='email' id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Username">
                 <p class="text-center text-danger email-error error"></p>
-            </div>
-            
-            <div class="mb-0 mb-3">
-                <input type="password" class="form-control" name='password' id="exampleInputPassword1" placeholder="Password">
-                <p class="text-center text-danger password-error error"></p>
-            </div>
-            <div class="d-flex align-items-center gap-1 mb-3 mx-2 justify-content-between">
-                <div class="d-flex gap-1">
-                    <div class="d-flex align-items-center">
-                        <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" data-v-26652ec2="">
+                        <label for="floatingInput">Email address</label>
                     </div>
-                    <div class="d-flex align-items-center">
-                        <label for='remember'class="">Remember me</label>
+  
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" name='password' id="exampleInputPassword1" placeholder="Password">
+                        <p class="text-center text-danger password-error error"></p>
+                        <label for="floatingPassword">Password</label>
+                      </div>
+  
+                    <div class="text-center pt-1 mb-5 pb-1 d-flex flex-column">
+                        <button type="submit" id="employee" class="btn btn-primary">SIGN IN</button>
+
+                      <a class="text-muted" href="#!">Forgot password?</a>
                     </div>
+  
+  
+                  </form>
+  
                 </div>
-                
-                <div class="d-flex justifiy-content-end w-max">
-                    <a href="#">Forgot Password?</a>
+              </div>
+              <div class="col-lg-6 d-flex align-items-center" style="background-color:#67668A;">
+                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                  <h4 class="mb-4">BFAR-NIFTC Tanay</h4>
+                  <p class="small mb-0 text-white">To conserve, protect, and practice sustainable development of the country's fisheries and aquatic resources; alleviate poverty by providing supplementary livelihood to the fisherfolk; improve aquaculture productivity within ecological limits; and utilize optimally the offshore and deep sea resources.</p>
                 </div>
+              </div>
             </div>
-            <button type="submit" id="employee" class="btn btn-primary">SIGN IN</button>
-        </form>
-
-
+          </div>
+        </div>
+      </div>
     </div>
-
 </div>
 
 <%-include('partials/Footer')%>
