--- a/views/partials/employeeAside.ejs
+++ b/views/partials/employeeAside.ejs
@@ -1,5 +1,6 @@
 
-<div class="d-flex flex-column flex-shrink-0 p-3" style="width: 280px; padding: 0 !important;">
+<div class="d-flex flex-column justify-content-between flex-shrink-0 p-3" style="width: 280px; height: 100vh; padding: 0 !important; position: sticky;
+top: 0;">
     <a href="#" class="d-flex flex-column align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none" style="padding: 30px">
         <div class="d-flex flex-row justify-content-center">
             <img src="/img/bfar-logo.png" class="img-fluid" alt="..." style="max-width: 40%;">
@@ -11,7 +12,7 @@
     
     <ul class="nav nav-pills flex-column mb-auto" style="">
       <li>
-        <a href="/employee/" class="nav-link <%=(url.toLowerCase().includes('/employee'))?'active':''%> ">
+        <a href="/employee/" class="nav-link <%=(url==='/' || url==='/admin/')?'active':''%> ">
           Dashboard
         </a>
       </li>
@@ -29,7 +30,7 @@
       <li class="nav-item dropdown position-static">
         <a class="nav-link dropdown-toggle <%=(url.toLowerCase().includes('/leave'))?'active':''%>" href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Leave</a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="/employee/leave">Leaves</a>
+          <a class="dropdown-item" href="/employee/leave/<%=employee.employee_details.designation.id%>">Leaves</a>
           <a class="dropdown-item" href="#">Leave Status</a>
           <a class="dropdown-item" href="#">Leave History</a>
         </div>
